# swordbow-magic

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  design.txt  makefile  swordbow-magic-client  swordbow-magic-server
catch/src/: hashgridsystem_test.cpp  rect_test.cpp  rendersystem_test.cpp
cmake/Modules/: ExternalProject.cmake  FindCereal.cmake  FindGit.cmake  FindHg.cmake  FindOGG.cmake
include/: accelerationcomponent.hpp  accelerationsystem.hpp  activateid.h  activateid.hpp  activateidonclients.hpp  addidtosystem.h  addidtosystem.hpp  animationcomponent.hpp  animationsystem.hpp  attackcomponent.hpp  attacksystem.hpp  birdcomponent.hpp  birdsystem.hpp  boundingbox.h  boundingbox.hpp  cameracomponent.hpp  camerasystem.hpp  client.hpp  clientdata.hpp  clientdisconnectedstate.hpp  clientreceiveinitialstate.hpp  clientrunningstate.hpp  collisionsystem.h  collisionsystem.hpp  commandcomponent.hpp  componentmanager.h  componentmanager.hpp  components.hpp  connection.hpp  createbloodsplatter.hpp  deltatime.h  deltatime.hpp  diffsystem.hpp  dynamicarray.h  entitymanager.h  entitymanager.hpp  eventmanager.h  eventmanager.hpp  events.hpp  flagcomponent.h  (+99 more)
resources/images/: overlay.xcf
src/: accelerationsystem.cpp  animationsystem.cpp  attacksystem.cpp  birdsystem.cpp  camerasystem.cpp  client.cpp  clientdisconnectedstate.cpp  clientreceiveinitialstate.cpp  clientrunningstate.cpp  collisionsystem.cpp  commandcomponent.cpp  componentmanager.cpp  deltatime.cpp  diffsystem.cpp  entitymanager.cpp  eventmanager.cpp  flagsystem.cpp  gridindexer.cpp  hashgrid.cpp  hashgridsystem.cpp  healthsystem.cpp  idmanager.cpp  initialcomponentssystem.cpp  inputsystem.cpp  ipaddress.cpp  isystem.cpp  keyboardsystem.cpp  logger.cpp  lowpolyadaptor.cpp  main.cpp  movecomponent.cpp  movediffsystem.cpp  movesystem.cpp  noisebrush.cpp  oggadaptor.cpp  overlay.cpp  player.cpp  playsound.cpp  positionboundingbox.cpp  rect.cpp  (+17 more)
test/: test_componentmanager.cpp  test_entitymanager.cpp  test_gridindexer.cpp  test_main.cpp  test_movecomponent.cpp  test_movesystem.cpp  test_rendersystem.cpp
